<resources>
    <string name="app_name" translatable="false">Psychika</string>
    <string name="press_back_again">Tekan kembali lagi untuk keluar</string>
    <string name="web_client_id" translatable="false">422866453064-f60vsdil6hdr6ftsm2c9srvgtivjdh5m.apps.googleusercontent.com</string>
    <string name="logo_app" translatable="false">Logo Psychika</string>
    <string name="login">Masuk</string>
    <string name="illust_login">Ilustrasi Masuk</string>
    <string name="login_hello">Hai, login untuk melanjutkan</string>
    <string name="email">Email</string>
    <string name="invalid_email">Gunakan format email</string>
    <string name="password">Kata sandi</string>
    <string name="invalid_password">Kata sandi tidak boleh kurang dari 8 karakter</string>
    <string name="remember_me">Ingat Saya</string>
    <string name="divider">Pembagi</string>
    <string name="or">atau</string>
    <string name="login_google">Masuk dengan Google</string>
    <string name="login_failed">Masuk tidak berhasil</string>
    <string name="dont_have_acc">Belum punya akun?</string>
    <string name="empty_form">Silakan isi kolom formulir</string>
    <string name="invalid_form">Silakan isi data formulir sesuai kebutuhan</string>
    <string name="no_user">Akun belum terdaftar. Silakan daftar terlebih dahulu.</string>
    <string name="invalid_input_user">Email atau kata sandi tidak valid. Silakan coba lagi.</string>
    <string name="try_login">Daftar Sukses! Silakan coba login ke akun Anda</string>
    <string name="sign_up">Daftar</string>
    <string name="illust_signup">Ilustrasi Daftar</string>
    <string name="signup_create">Buat akun untuk melanjutkan</string>
    <string name="first_name">Nama Depan</string>
    <string name="last_name">Nama Belakang</string>
    <string name="confirm_pass">Konfirmasi Sandi</string>
    <string name="already_acc">Sudah memiliki akun?</string>
    <string name="pass_not_match">Sandi tidak cocok</string>
    <string name="email_registered">Email sudah terdaftar. Silakan gunakan email lain.</string>
    <string name="signup_success">Daftar Sukses! Silakan coba login ke akun Anda</string>
    <string name="forgot_pass">Lupa Kata Sandi?</string>
    <string name="reset_pass">Atur Ulang Kata Sandi</string>
    <string name="illust_forgot_pass">Ilustrasi Lupa Kata Sandi</string>
    <string name="enter_email">Masukkan email Anda untuk melanjutkan</string>
    <string name="send">Kirim</string>
    <string name="remember_pass">Ingat kata sandi Anda?</string>
    <string name="confirm_send">Email pengaturan ulang kata sandi sedang dikirim ke %s</string>
    <string name="home">Beranda</string>
    <string name="hi_user">Hai, %s</string>
    <string name="ready_practice">Siap untuk berlatih kesadaran hari ini?</string>
    <string name="illust_face">Ilustrasi Wajah</string>
    <string name="question_feel">Bagaimana perasaanmu?</string>
    <string name="recent_article">Artikel Terbaru</string>
    <string name="cant_get_user_data_google">Tidak dapat mengambil data pengguna</string>
    <string name="session_expired">Sesi Anda telah habis. Silakan login kembali untuk melanjutkan.</string>
    <string-array name="feel_desc">
        <item>Marah</item>
        <item>Buruk</item>
        <item>Baik</item>
        <item>Bahagia</item>
    </string-array>
    <string name="chat">Obrolan</string>
    <string name="chatbot">Chatbot</string>
    <string name="greeting_message">Hai, apa kabar hari mu?</string>
    <string name="icon_send_message">Ikon Kirim Pesan</string>
    <string name="white_container">Wadah Putihr</string>
    <string name="hint_message">Ketik pesan anda</string>
    <string name="chat_timeout">Error: Psychika sedang sibuk</string>
    <string name="article">Artikel</string>
    <string name="search">Cari</string>
    <string name="leaf_background">Latar Belakang Daun</string>
    <string name="photo_article">Foto Artikel</string>
    <string name="title_article">Studi Menemukan Jalan-jalan di Alam Meningkatkan Kesejahteraan Mental</string>
    <string name="no_article_found">Tidak ada artikel yang ditemukan</string>
    <string name="sample_article_picture">Gambar Artikel</string>
    <string name="sample_article_title">Studi Menemukan Jalan-jalan di Alam Meningkatkan Kesejahteraan Mental</string>
    <string name="sample_article_date">5 Mei 2024</string>
    <string name="sample_article_desc">Sebuah studi baru-baru ini yang diterbitkan menyoroti dampak positif yang signifikan dari jalan-jalan di alam terhadap kesejahteraan mental. Penelitian ini menggarisbawahi manfaat psikologis dari berinteraksi dengan lingkungan alam dan memperkuat pentingnya mengintegrasikan alam ke dalam rutinitas sehari-hari.\n\nDilakukan oleh tim peneliti dari Universitas XYZ, penelitian ini melibatkan lebih dari 200 peserta yang dibagi menjadi dua kelompok. Kelompok pertama diinstruksikan berjalan kaki selama 60 menit di kawasan padat perkotaan, sedangkan kelompok kedua berjalan di kawasan hutan yang tenteram. Kedua kelompok tersebut kemudian dinilai berdasarkan beberapa indikator kesejahteraan mental, termasuk tingkat stres, kecemasan, suasana hati, dan kebahagiaan secara keseluruhan.\n\nHasilnya menunjukkan bahwa kelompok yang berjalan-jalan di alam mengalami penurunan tingkat stres dan kecemasan yang signifikan dibandingkan dengan kelompok yang berjalan-jalan di alam. kelompok pejalan kaki perkotaan. Mereka juga melaporkan peningkatan suasana hati dan rasa bahagia yang lebih besar. “Berjalan di alam memberikan efek pemulihan yang kuat pada kesejahteraan mental,” kata Dr. Jane Doe, peneliti utama. "Berinteraksi dengan alam dapat membantu mengurangi ketegangan dan menghadirkan perasaan tenang dan gembira."\n\nPenelitian ini memperkuat keyakinan lama bahwa alam memiliki efek menenangkan pada pikiran manusia. Lebih lanjut, temuan ini sejalan dengan beberapa penelitian sebelumnya yang menunjukkan bahwa berinteraksi dengan alam dapat meningkatkan fungsi kognitif dan mengurangi gejala depresi.</string>
    <string-array name="article_publisher_profile_pic">
        <item>@drawable/profile_avatar</item>
        <item>@drawable/profile_avatar</item>
        <item>@drawable/profile_avatar</item>
        <item>@drawable/profile_avatar</item>
        <item>@drawable/profile_avatar</item>
        <item>@drawable/profile_avatar</item>
        <item>@drawable/profile_avatar</item>
        <item>@drawable/profile_avatar</item>
        <item>@drawable/profile_avatar</item>
        <item>@drawable/profile_avatar</item>
        <item>@drawable/profile_avatar</item>
    </string-array>
    <string-array name="article_publisher">
        <item>Muhammad Iqbal Fuadi</item>
        <item>ANTARA</item>
        <item>Ayu Rifka Sitoresmi</item>
        <item>Fitriyani Puspa Samodra</item>
        <item>Febyana Putri</item>
        <item>Fitriyani Puspa Samodra</item>
        <item>Fitriyani Puspa Samodra</item>
        <item>Nesa Ayunda</item>
        <item>Administrator</item>
        <item>Kompas Indonesia</item>
        <item>R Adinda</item>
    </string-array>
    <string-array name="article_title">
        <item>Pentingnya Kesehatan Mental Pada Mahasiswa</item>
        <item>Kegiatan Berbasis Alam Dapat Meningkatkan Kesehatan Mental Siswa</item>
        <item>Kapan Harus ke Psikiater? Kenali Tanda-tanda Seseorang Perlu Konsultasi</item>
        <item>Kenapa Berdamai dengan Diri Sendiri Penting? Simak Penjelasan dan Caranya</item>
        <item>Pengaruh Sosial Media Terhadap Kesehatan Mental Generasi Z</item>
        <item>Penyebab Rasa Cemas Berlebih, Kenali Jenis dan Cara Mengatasinya</item>
        <item>Pentingnya Cek Mental Health Rutin, Deteksi Gangguan Sedini Mungkin</item>
        <item>Apakah Insecure Dapat Memengaruhi Mental Remaja?</item>
        <item>Menjaga Kesehatan Mental: Tips dan Trik Harian</item>
        <item>Menjaga Mental Health di Tengah Dinamika Hidup Modern: Pentingnya Health Awareness dan Dukungan Positive Circle</item>
        <item>Cara Melatih Mental Agar Selalu Kuat</item>
    </string-array>
    <string-array name="article_date_publish">
        <item>18 Mei 2024</item>
        <item>7 Mei 2024</item>
        <item>4 Mei 2024</item>
        <item>1 Maret 2024</item>
        <item>17 Maret 2024</item>
        <item>15 Maret 2024</item>
        <item>12 Februari 2024</item>
        <item>27 Januari 2024</item>
        <item>5 Januari 2024</item>
        <item>31 Desember 2023</item>
        <item>11 Juni 2022</item>
    </string-array>
    <string-array name="article_photo">
        <item>@drawable/article_photo_01</item>
        <item>@drawable/article_photo_02</item>
        <item>@drawable/article_photo_03</item>
        <item>@drawable/article_photo_04</item>
        <item>@drawable/article_photo_05</item>
        <item>@drawable/article_photo_06</item>
        <item>@drawable/article_photo_07</item>
        <item>@drawable/article_photo_08</item>
        <item>@drawable/article_photo_09</item>
        <item>@drawable/article_photo_10</item>
        <item>@drawable/article_photo_11</item>
    </string-array>
    <string name="profile">Profil</string>
    <string name="bubble_background">Latar Belakang Gelembung</string>
    <string name="user_fullname">Pengguna</string>
    <string name="user_email">pengguna@gmail.com</string>
    <string name="icon_history">Ikon Sejarah</string>
    <string name="history">Sejarah Obrolan</string>
    <string name="maps">Maps</string>
    <string name="icon_edit_profile">Ikon Ubah Profil</string>
    <string name="edit_profile">Ubah Profil</string>
    <string name="icon_change_password">Ikon Ubah Kata Sandi</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="icon_language">Ikon Bahasa</string>
    <string name="language">Bahasa</string>
    <string name="icon_logout">Ikon Keluar</string>
    <string name="logout">Keluar</string>
    <string name="mental_health">Kesehatan Mental</string>
    <string name="illust_mental_health">Ilustrasi Kesehatan Mental</string>
    <string name="high_mental_health">Persentase kesehatan mentalmu tergolong tinggi, semoga hari-harimu selalu bahagia :)</string>
    <string name="back">Kembali</string>
    <string name="see_history">Lihat Sejarah</string>
    <string name="back_button">Tombol kembali</string>
    <string name="illust_edit_profile">Ilustrasi Ubah Profil</string>
    <string name="success">Sukses</string>
    <string name="changes_success">Perubahan berhasil disimpan</string>
    <string name="ok">OKE</string>
</resources>