<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shades_50"
    tools:context=".ui.profile.displayprofile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_700">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:indicatorColor="@color/primary_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bubble_background"
            android:scaleType="fitXY"
            android:src="@drawable/bubble_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_profile"
            style="@style/TextAppearance.AppCompat.DisplayXs.Semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/profile"
            android:textColor="@color/shades_50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/iv_white_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/white_container"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="90dp"
            android:paddingBottom="15dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_profile">

            <TextView
                android:id="@+id/tv_user_name"
                style="@style/TextAppearance.AppCompat.TextLg.Semibold"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textColor="@color/primary_800"
                tools:text="@string/user_fullname" />

            <TextView
                android:id="@+id/tv_user_email"
                style="@style/TextAppearance.AppCompat.TextXs.Regular"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@color/primary_800"
                tools:text="@string/user_email" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:contentDescription="@string/divider"
                android:src="@drawable/divider" />

            <LinearLayout
                android:id="@+id/btn_maps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_profile"
                android:padding="15dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/icon_history"
                    android:src="@drawable/ic_maps" />

                <TextView
                    android:id="@+id/tv_maps"
                    style="@style/TextAppearance.AppCompat.TextSm.Medium"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/maps"
                    android:textColor="@color/primary_900" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_profile"
                android:padding="15dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/icon_history"
                    android:src="@drawable/ic_history" />

                <TextView
                    android:id="@+id/tv_history"
                    style="@style/TextAppearance.AppCompat.TextSm.Medium"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/history"
                    android:textColor="@color/primary_900" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_profile"
                android:padding="15dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/icon_edit_profile"
                    android:src="@drawable/ic_edit_profile" />

                <TextView
                    android:id="@+id/tv_edit_profile"
                    style="@style/TextAppearance.AppCompat.TextSm.Medium"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/edit_profile"
                    android:textColor="@color/primary_900" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_change_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_profile"
                android:padding="15dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/icon_change_password"
                    android:src="@drawable/ic_change_pass" />

                <TextView
                    android:id="@+id/tv_change_pass"
                    style="@style/TextAppearance.AppCompat.TextSm.Medium"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/change_password"
                    android:textColor="@color/primary_900" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_profile"
                android:padding="15dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/icon_language"
                    android:src="@drawable/ic_language" />

                <TextView
                    android:id="@+id/tv_language"
                    style="@style/TextAppearance.AppCompat.TextSm.Medium"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/language"
                    android:textColor="@color/primary_900" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_logout_button"
                android:padding="15dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/icon_logout"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:id="@+id/tv_logout"
                    style="@style/TextAppearance.AppCompat.TextSm.Medium"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/logout"
                    android:textColor="@color/error_700" />
            </LinearLayout>
        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_picture"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            android:elevation="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_avatar"
            app:civ_border_color="@color/shades_50"
            app:civ_border_width="5dp"
            app:layout_constraintBottom_toTopOf="@id/iv_white_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_white_container" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>