<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shades_50"
    android:paddingHorizontal="20dp"
    tools:context=".ui.auth.forgotpass.ForgotPasswordActivity">

  <ImageView
      android:id="@+id/illust_forgot_pass"
      android:layout_width="330dp"
      android:layout_height="240dp"
      android:layout_marginTop="50dp"
      android:contentDescription="@string/illust_forgot_pass"
      android:src="@drawable/illust_forgot_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/tv_forgot_pass"
      style="@style/TextAppearance.AppCompat.DisplayXs.Semibold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/reset_pass"
      android:textColor="@color/primary_900"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/illust_forgot_pass" />

  <TextView
      android:id="@+id/tv_hello"
      style="@style/TextAppearance.AppCompat.TextSm.Regular"
      android:layout_width="wrap_content"
      android:text="@string/enter_email"
      android:textColor="@color/neutral_700"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass" />

  <TextView
      android:id="@+id/tv_email"
      style="@style/TextAppearance.AppCompat.TextSm.Medium"
      android:layout_width="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/email"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_hello" />

  <com.example.psychika.ui.custom.EmailEditText
      android:id="@+id/et_forgot_pass_email"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_marginTop="5dp"
      android:background="@drawable/outlined_edit_text"
      android:paddingHorizontal="15dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_email" />

  <Button
      android:id="@+id/btn_send"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/custom_button"
      android:text="@string/send"
      android:layout_marginTop="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_forgot_pass_email" />

  <TextView
      android:id="@+id/tv_already_acc"
      style="@style/TextAppearance.AppCompat.TextXs.Regular"
      android:layout_width="wrap_content"
      android:text="@string/remember_pass"
      android:textColor="@color/neutral_900"
      android:layout_marginTop="15dp"
      app:layout_constraintEnd_toStartOf="@id/tv_login"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btn_send" />

  <TextView
      android:id="@+id/tv_login"
      style="@style/TextAppearance.AppCompat.TextXs.Regular"
      android:layout_width="wrap_content"
      android:text="@string/login"
      android:textColor="@color/primary_900"
      android:layout_marginStart="5dp"
      android:layout_marginBottom="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/tv_already_acc"
      app:layout_constraintTop_toTopOf="@+id/tv_already_acc" />
  </androidx.constraintlayout.widget.ConstraintLayout>