<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingHorizontal="50dp"
    android:paddingVertical="30dp"
    android:background="@drawable/pop_up_background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="145dp"
        android:contentDescription="@string/illust_edit_profile"
        android:src="@drawable/illust_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_success"
        style="@style/TextAppearance.AppCompat.TextLg.Semibold"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/success"
        android:textColor="@color/primary_800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_changes_success"
        style="@style/TextAppearance.AppCompat.TextXs.Regular"
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/changes_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_success" />

    <Button
        android:id="@+id/btn_ok"
        style="@style/TextAppearance.AppCompat.TextSm.Semibold"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/ok"
        android:textColor="@color/shades_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_changes_success" />
</androidx.constraintlayout.widget.ConstraintLayout>