<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="15dp"
    android:paddingBottom="20dp"
    android:background="@drawable/pop_up_background">

    <ImageView
        android:id="@+id/iv_illust_history"
        android:layout_width="190dp"
        android:layout_height="215dp"
        android:src="@drawable/illust_history"
        android:contentDescription="@string/illust_mental_health"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_mental_health"
        style="@style/TextAppearance.AppCompat.TextLg.Semibold"
        android:layout_width="wrap_content"
        android:text="@string/mental_health"
        android:textColor="@color/secondary_900"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_illust_history"
        app:layout_constraintStart_toStartOf="@+id/iv_illust_history"
        app:layout_constraintTop_toBottomOf="@+id/iv_illust_history" />

    <TextView
        android:id="@+id/tv_advice"
        style="@style/TextAppearance.AppCompat.TextXs.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/high_mental_health"
        android:textColor="@color/neutral_800"
        app:layout_constraintEnd_toEndOf="@id/iv_illust_history"
        app:layout_constraintStart_toStartOf="@+id/iv_illust_history"
        app:layout_constraintTop_toBottomOf="@+id/tv_mental_health" />

    <com.example.psychika.ui.custom.OutlinedButton
        android:id="@+id/btn_back"
        style="@style/TextAppearance.AppCompat.TextXxs.Semibold"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="@+id/iv_illust_history"
        app:layout_constraintStart_toStartOf="@+id/iv_illust_history"
        app:layout_constraintTop_toBottomOf="@+id/tv_advice" />

    <Button
        android:id="@+id/btn_see_history"
        style="@style/TextAppearance.AppCompat.TextXxs.Semibold"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@drawable/custom_button"
        android:text="@string/see_history"
        android:textColor="@color/shades_50"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_illust_history"
        app:layout_constraintStart_toStartOf="@+id/iv_illust_history"
        app:layout_constraintTop_toBottomOf="@+id/btn_back" />
</androidx.constraintlayout.widget.ConstraintLayout>