<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_700"
    tools:context=".ui.history.chatbot.ChatbotHistory">

    <ImageView
        android:id="@+id/iv_leaf_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/leaf_background"
        android:scaleType="fitXY"
        android:src="@drawable/chatbot_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/shades_50"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/tv_chatbot"
        style="@style/TextAppearance.AppCompat.TextXl.Semibold"
        android:layout_width="wrap_content"
        android:text="@string/chatbot"
        android:textColor="@color/shades_50"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="@+id/iv_back"
        app:layout_constraintBottom_toBottomOf="@id/iv_back" />

    <ImageView
        android:id="@+id/iv_white_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/white_container"
        android:contentDescription="@string/white_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_chatbot" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_chat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        android:paddingBottom="40dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_white_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_user_chat" />
</androidx.constraintlayout.widget.ConstraintLayout>